--- a/.aliasrc
+++ b/.aliasrc
@@ -1,16 +1,30 @@
 #!/bin/bash
 
 alias tmux='tmux -2'
-alias cp='cp -iv'
+alias cp='cpv -iv'
 alias mv='mv -iv'
+alias rm='rm -v'
 alias ip='ip -c'
 
-alias setclip='xclip -selection c'
-alias getclip='xclip -selection c -o'
+updaterc () {
+    current_dir="$PWD"
+    cd ~/.dotfiles || {
+        echo 'The .dotfiles folder should be at ~/.dotfiles to auto update'
+        return 2
+    }
+    git pull
+    cd "$current_dir" || return 2
+}
+
+command -v xclip >/dev/null && { alias setclip='xclip -selection c'; alias getclip='xclip -selection c -o'; }
+command -v wl-copy >/dev/null && { alias setclip='wl-copy'; alias getclip='wl-paste'; }
 
 alias con='ssh contabo'
 alias poof='poweroff'
-alias myip='curl ipinfo.io/ip'
+alias pubip='curl ipinfo.io/ip'
+
+alias wg0='sudo systemctl stop wg-quick@wg1 && sudo systemctl start wg-quick@wg0'
+alias wg1='sudo systemctl stop wg-quick@wg0 && sudo systemctl start wg-quick@wg1'
 
 alias lelcat='bash -c "$(wget -O- https://raw.githubusercontent.com/RubixDev/HandyLinuxStuff/main/meow.sh)"'
 cheat () { curl -s "cheat.sh/$1" | less; }
