Reload shell and aliases on updaterc

--- a/.aliasrc
+++ b/.aliasrc
@@ -15,6 +15,8 @@ updaterc () {
     }
     git pull
     cd "$current_dir" || return 2
+    # Reload shell
+    exec "$SHELL"
 }
 
 command -v xclip >/dev/null && { alias setclip='xclip -selection c'; alias getclip='xclip -selection c -o'; }
