--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -5,8 +5,8 @@
 [keybindings]
 [profiles]
   [[default]]
-    background_color = "#2e3436"
-    background_darkness = 0.69
+    background_color = "#241f31"
+    background_darkness = 0.85
     background_type = transparent
     cursor_color = "#aaaaaa"
     font = JetBrains Mono 11
