--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,2 @@
-set -g default-terminal "screen-256color"
+set  -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",alacritty:RGB,xterm-256color:RGB,gnome*:RGB"
