Edit polybar date format

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -168,8 +168,7 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = %d.%m.%Y %I:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
