Edit polybar config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,12 +20,12 @@
 background = #282A2E
 background-alt = #373B41
 foreground = #C5C8C6
-primary = #F0C674
+primary = #aa80ff
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
-[bar/example]
+[bar/main]
 width = 100%
 height = 16pt
 
@@ -44,8 +44,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = monospace:size=10;1
 
-modules-left = xworkspaces
-modules-center = xwindow
+modules-left = xworkspaces xwindow
 modules-right = pulseaudio xkeyboard memory cpu wlan battery github date
 
 cursor-click = pointer
@@ -84,29 +83,21 @@ label = %title:0:60:...%
 type = internal/battery
 ;full-at = 99
 low-at = 15
-;battery = BAT0
-;adapter = ADP1
+battery = BAT1
+adapter = ADP1
+label-charging = %{F#8cc265}%percentage%%%{F-}
+label-discharging = %{F#d1b652}%percentage%%%{F-}
+label-low = %{F#e05561}%percentage%%%{F-}
 
 [module/github]
 type = internal/github
-token = ${file:/home/silas/.config/polybar/.github}
+token = ${file:$HOME/.config/polybar/.github}
 empty-notifications = true
-user = RubixDev
+user = ${env:GIT_USERNAME:RubixDev}
 interval = 10
 
 label = GitHub: %notifications%
 label-offline = GitHub: X
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -147,22 +138,14 @@ format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
-[network-base]
+[module/wlan]
 type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-base
+label-disconnected = disconnected
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %essid%
 
 [module/date]
 type = internal/date
