--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -117,7 +117,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: 'JetBrains Mono NL'
+    family: 'JetBrains Mono'
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
