Edit polybar config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -45,7 +45,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace:size=10;1
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio xkeyboard memory cpu wlan battery github date
+modules-right = pulseaudio xkeyboard memory cpu wlan eth battery github date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -81,7 +81,7 @@ label = %title:0:60:...%
 
 [module/battery]
 type = internal/battery
-;full-at = 99
+full-at = 99
 low-at = 15
 battery = BAT1
 adapter = ADP1
@@ -137,14 +137,22 @@ format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
-[module/wlan]
+[network-base]
 type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = disconnected
+label-disconnected = %{F#e05561}%ifname%%{F-}
+
+[module/wlan]
+inherit = network-base
 interface-type = wireless
-label-connected = %essid%
+label-connected = %{F#aa80ff}%essid%%{F-} %downspeed%
+
+[module/eth]
+inherit = network-base
+interface-type = wired
+label-connected = %downspeed%
 
 [module/date]
 type = internal/date
