Add more laptop specific config

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -45,7 +45,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace:size=10;1
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio xkeyboard memory cpu wlan eth battery github date
+modules-right = backlight pulseaudio xkeyboard memory cpu wlan eth battery github date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -78,6 +78,13 @@ label-empty-padding = 1
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
+
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+# If not working, see polybar wiki for more details
+enable-scroll = true
+label = %{F#aa80ff}BKL%{F-} %percentage%%
 
 [module/battery]
 type = internal/battery
