Change BKL to BRI for brightness in polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -84,7 +84,7 @@ type = internal/backlight
 card = intel_backlight
 # If not working, see polybar wiki for more details
 enable-scroll = true
-label = %{F#aa80ff}BKL%{F-} %percentage%%
+label = %{F#aa80ff}BRI%{F-} %percentage%%
 
 [module/battery]
 type = internal/battery
