add wezterm and joshuto configs

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -285,7 +285,7 @@ colors:
     black:   '#3f4451'
     red:     '#e05561'
     green:   '#8cc265'
-    yellow:  '#d1b652'
+    yellow:  '#e1c652'
     blue:    '#4aa5f0'
     magenta: '#c162de'
     cyan:    '#42b3c2'
