chore: push local changes

--- a/.config/git/config
+++ b/.config/git/config
@@ -15,3 +15,16 @@
     gpgSign = true
 [push]
 	autoSetupRemote = true
+
+# configure `delta` as the diff viewer
+[core]
+    pager = delta
+[interactive]
+    diffFilter = delta --color-only
+[delta]
+    navigate = true    # use n and N to move between diff sections
+    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+[merge]
+    conflictstyle = diff3
+[diff]
+    colorMoved = default
