--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -5,6 +5,7 @@ line-number = "relative"
 cursorline = true
 cursorcolumn = true
 auto-format = false
+true-color = true
 rulers = [120]
 bufferline = "multiple"
 color-modes = true
