chore: more hyprland customization

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,9 +34,9 @@ monitor = HDMI-A-1, 1920x1080@75, 1920x0, 1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
-$fileManager = kitty yazi
-$menu = kitty --class='launcher' /usr/bin/sway-launcher-desktop
+$terminal = wezterm
+$fileManager = wezterm start yazi
+$menu = wezterm start --class='launcher' /usr/bin/sway-launcher-desktop
 
 
 #################
@@ -50,7 +50,9 @@ $menu = kitty --class='launcher' /usr/bin/sway-launcher-desktop
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.config/waybar/launch-waybar.sh &
-exec-once = hyprsunset --temperature 5000
+exec-once = hyprsunset --temperature 4000
+exec-once = wezterm start --class='pixootop' $HOME/.local/share/cargo/bin/pixootop
+exec-once = dex -a
 
 
 #############################
@@ -60,7 +62,10 @@ exec-once = hyprsunset --temperature 5000
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,Breeze
 env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+env = GTK_THEME,Arc-Dark
 
 
 #####################
@@ -155,12 +160,6 @@ animations {
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
-windowrule = float, class:launcher
-windowrule = size 50% 80%, class:launcher
-windowrule = center, class:launcher
-windowrule = pin, class:launcher
-windowrule = stayfocused, class:launcher
-
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -193,6 +192,7 @@ input {
     kb_options =
     kb_rules =
 
+    numlock_by_default = true
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -205,13 +205,6 @@ input {
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = false
-}
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
 }
 
 
@@ -227,10 +220,14 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, S, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, I, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen, 0
+bind = $mainMod, M, fullscreen, 1
+
+bind = , Print, exec, slurp | grim -g - - | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
@@ -295,6 +292,17 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
+workspace = 1, monitor:DP-3
+workspace = 2, monitor:DP-3
+workspace = 3, monitor:DP-3
+workspace = 4, monitor:DP-3
+workspace = 5, monitor:DP-3, defaultName:bg
+workspace = 6, monitor:HDMI-A-1
+workspace = 7, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
+workspace = 9, monitor:HDMI-A-1
+workspace = 10, monitor:HDMI-A-1
+
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
@@ -303,3 +311,12 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrule = float, class:launcher
+windowrule = size 50% 80%, class:launcher
+windowrule = center, class:launcher
+windowrule = pin, class:launcher
+windowrule = stayfocused, class:launcher
+
+windowrule = noinitialfocus, class:pixootop
+windowrule = workspace 5 silent, class:pixootop
