--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,15 +1,16 @@
 [Settings]
-gtk-theme-name=Layan-Dark
-gtk-icon-theme-name=Tela-purple-dark
-gtk-font-name=Noto Sans 11
+gtk-application-prefer-dark-theme = true
+gtk-button-images=1
 gtk-cursor-theme-name=Breeze
 gtk-cursor-theme-size=0
-gtk-toolbar-style=GTK_TOOLBAR_BOTH
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=1
-gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
+gtk-font-name=Noto Sans 11
+gtk-icon-theme-name=Tela-purple-dark
+gtk-menu-images=1
+gtk-theme-name=Arc-Dark
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
