feat(omp): icon for `~/coding/go`

--- a/.config/oh-my-posh/p10k.toml
+++ b/.config/oh-my-posh/p10k.toml
@@ -62,6 +62,7 @@ display_root = true
 "~/coding/kotlin" = "󱈙"
 "~/coding/ts" = "󰛦"
 "~/coding/minecraft" = "󰍳"
+"~/coding/go" = ""
 
 [[blocks.segments]]
 type = "git"
