chore(hypr): autostart thunderbird and remove pixootop

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,7 +51,7 @@ $menu = wezterm start --class='launcher' /usr/bin/sway-launcher-desktop
 # exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.config/waybar/launch-waybar.sh &
 exec-once = hyprsunset --temperature 4000
-exec-once = wezterm start --class='pixootop' $HOME/.local/share/cargo/bin/pixootop
+exec-once = thunderbird
 exec-once = dex -a
 
 
@@ -318,5 +318,5 @@ windowrule = center, class:launcher
 windowrule = pin, class:launcher
 windowrule = stayfocused, class:launcher
 
-windowrule = noinitialfocus, class:pixootop
-windowrule = workspace 5 silent, class:pixootop
+windowrule = noinitialfocus, class:thunderbird
+windowrule = workspace 5 silent, class:thunderbird
