feat(hypr): keybind for swapsplit

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -224,6 +224,7 @@ bind = $mainMod, S, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, I, togglesplit, # dwindle
+bind = $mainMod SHIFT, I, swapsplit, # dwindle
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, M, fullscreen, 1
 
