chore(waybar): 12-hour clock

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -93,7 +93,7 @@
     "clock": {
         // "timezone": "America/New_York",
         "interval": 1,
-        "format": "{:%d.%m.%Y %H:%M:%S}",
+        "format": "{:%d.%m.%Y %I:%M:%S %p}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format-alt": "{:%Y-%m-%d}"
     },
